k8s/k8s_testpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: testcurl
  namespace: webpages
spec:
  containers:
  - name: curl
    image: curlimages/curl 
    command: [ "sleep", "600" ]
