k8s/k8s_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: patsite-service
  namespace: webpages
spec:
  type: NodePort
  selector:
    website: patsite
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
    protocol: TCP
