k8s/k8s_np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: denyall
  namespace: webpages
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
